--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "express-jwt": "^3.0.1",
+    "fullcalendar": "^3.5.1",
+    "gcal": "^1.0.1",
+    "gulp-concat-sourcemap": "^1.3.1",
+    "gulp-ignore": "^2.0.2",
+    "gulp-util": "^3.0.8",
     "jade": "~1.9.1",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^5.0.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.1.2",
     "morgan": "~1.5.1",
     "passport": "^0.2.2",
