--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "MEAN-stack-authentication",
+  "name": "SangRoyaleApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "8.4.0"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
