--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.3.3",
     "cr.js": "^0.2.2",
     "debug": "~2.1.1",
+    "download-file": "^0.1.5",
     "express": "~4.11.1",
     "express-jwt": "^3.0.1",
     "fullcalendar": "^3.5.1",
@@ -22,13 +23,16 @@
     "gulp-util": "^3.0.8",
     "jade": "~1.9.1",
     "jquery": "^3.2.1",
+    "json2xls": "^0.1.2",
     "jsonwebtoken": "^5.0.4",
     "moment": "^2.18.1",
     "mongoose": "^4.1.2",
     "morgan": "~1.5.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.2.0"
+    "request-promise": "^4.2.2",
+    "serve-favicon": "~2.2.0",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
