--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "download-file": "^0.1.5",
     "express": "~4.11.1",
     "express-jwt": "^3.0.1",
+    "feed": "^1.1.1",
     "fullcalendar": "^3.5.1",
     "gcal": "^1.0.1",
     "gulp-concat-sourcemap": "^1.3.1",
