--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "challonge": "^2.1.0",
     "cookie-parser": "~1.3.3",
     "cr.js": "^0.2.2",
+    "cron-job-manager": "^1.0.7",
     "debug": "~2.1.1",
     "download-file": "^0.1.5",
     "express": "~4.11.1",
