--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "bull": "^3.3.10",
     "challonge": "^2.1.0",
     "cookie-parser": "~1.3.3",
     "cr.js": "^0.2.2",
