--- a/package.json
+++ b/package.json
@@ -3,21 +3,35 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "ng": "ng",
+    "start": "ng build && node ./bin/www",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "engines": {
     "node": "8.4.0"
   },
   "dependencies": {
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
     "body-parser": "~1.10.2",
     "bull": "^3.3.10",
     "challonge": "^2.1.0",
     "cookie-parser": "~1.3.3",
+    "core-js": "^2.5.4",
     "cr.js": "^0.2.2",
     "cron-job-manager": "^1.0.7",
-    "debug": "~2.1.1",
     "download-file": "^0.1.5",
-    "express": "~4.11.1",
+    "express": "^4.16.3",
     "express-jwt": "^3.0.1",
     "feed": "^1.1.1",
     "fullcalendar": "^3.5.1",
@@ -29,14 +43,16 @@
     "jquery": "^3.2.1",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^5.0.4",
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
     "mongoose": "^4.1.2",
-    "morgan": "~1.5.1",
+    "morgan": "^1.9.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "request-promise": "^4.2.2",
-    "serve-favicon": "~2.2.0",
-    "webpack": "^3.10.0"
+    "rxjs": "^6.0.0",
+    "serve-favicon": "^2.5.0",
+    "webpack": "^4.16.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
@@ -45,6 +61,25 @@
     "gulp-ng-html2js": "^0.2.2",
     "gulp-sourcemaps": "^1.11.0",
     "gulp-uglify": "^1.5.4",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "~6.1.1",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
