--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.16.3",
     "express-jwt": "^3.0.1",
     "feed": "^1.1.1",
+    "file-saver": "^2.0.2",
     "fullcalendar": "^3.5.1",
     "gcal": "^1.0.1",
     "gulp-concat-sourcemap": "^1.3.1",
@@ -55,6 +56,7 @@
     "serve-favicon": "^2.5.0",
     "tslib": "^1.9.0",
     "webpack": "^4.16.3",
+    "xlsx": "^0.14.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
