--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e", 
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "node": "10.6.0"
@@ -58,10 +59,13 @@
     "tslib": "^1.9.0",
     "webpack": "^4.16.3",
     "xlsx": "^0.14.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "3.1.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/language-service": "^7.2.15",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
