--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/images"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
