--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "npm": "6.1.0"
   },
   "dependencies": {
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
+    "@angular/cli": "~7.3.9",
     "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.15",
     "@angular/http": "^7.2.15",
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "body-parser": "~1.10.2",
+    "bootstrap": "^4.3.1",
     "challonge": "^2.1.0",
     "cookie-parser": "~1.3.3",
     "core-js": "^2.5.4",
@@ -48,6 +49,7 @@
     "jade": "~1.9.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^5.0.4",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^4.1.2",
     "morgan": "^1.9.0",
@@ -57,10 +59,10 @@
     "rxjs": "^6.0.0",
     "serve-favicon": "^2.5.0",
     "tslib": "^1.9.0",
+    "typescript": "3.1.6",
     "webpack": "^4.16.3",
     "xlsx": "^0.14.3",
-    "zone.js": "~0.8.26",
-    "typescript": "3.1.6"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "~7.3.9",
