--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "@ng-bootstrap/ng-bootstrap": "4.1.3",
     "body-parser": "~1.10.2",
     "bootstrap": "^4.3.1",
     "challonge": "^2.1.0",
